# wikitext-table-parser

./: .gitignore  Cargo.toml  README.md  pyproject.toml  tmp.txt
examples/: use_in_python.py
src/: lib.rs  main.rs  parser.rs  tokenizer.rs  utils.rs
wikitext_tables/: 1.txt  10.txt  11.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
