[package]
name = "wikitext_table_parser"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
keywords = ["wiki", "wikitext","table","parser"]
categories = ["text-processing","parser-implementations"]
description = "A Rust implement for parse the wikitext's table."
documentation = "https://github.com/p208p2002/wikitext-table-parser"
readme = "README.md"
homepage = "https://github.com/p208p2002/wikitext-table-parser"
repository = "https://github.com/p208p2002/wikitext-table-parser"
exclude = [
    "wikitext_tables/*",
    "src/main.rs",
]

[lib]
name = "wikitext_table_parser"
path = "src/lib.rs"

[dependencies]
regex = "1.10.*"
strum = "0.26"
strum_macros = "0.26"